# django-mailing

./: .env-template  check_code.sh  pyproject.toml
config/: settings.py  urls.py
fixtures/: groups.json
mailing/: admin.py  forms.py  main_menu.py  models.py  serializers.py  services.py  urls.py  views.py
mailing/management/commands/: run_sendings.py  runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_initial.py
mailing/templates/: base.pug  cabinet.pug  home.pug  mailing-form.pug  mailing.pug  mailings-all.pug  main_menu.pug  message-form.pug  message.pug  recipient-form.pug  recipient.pug  sending-form.pug  sending.pug  users.pug
static/: custom.css  utils.js
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_comment_user_fio_alter_user_email.py  0003_user_confirm_alter_user_is_active.py
users/templates/: cabinet.pug  confirm.pug  login.pug  password-change.pug  password-restore.pug  register.pug
