[project]
name = "django-mailing"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem Filippow",email = "a.filippov@qtech.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pypugjs (>=5.12.0,<6.0.0)",
    "redis (>=6.3.0,<7.0.0)",
    "django-bootstrap-datepicker-plus (>=5.0.5,<6.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.17.1,<2.0.0)",
    "django-apscheduler (>=0.7.0,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119
multi_line_output = 3

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = '.venv migrations'